[tool.poetry]
name = "repl_python3_PogBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
apiai = "^1.2.3"
pytz = "^2021.1"
httplib2 = "^0.19.1"
python-youtube = "^0.8.1"
replit = "^3.2.4"
prsaw = "^0.4.0"
cachetools = "^4.2.2"
jishaku = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
