[tool.poetry]
name = "PogBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
cachetools = "^4.2.2"
jishaku = "^2.2.0"
SQLAlchemy = "^1.4.39"
asyncpg = "^0.26.0"
humanize = "^4.2.3"
ormsgpack = "^1.2.3"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
bandit = "^1.7.4"
black = "^22.6.0"
types-cachetools = "^5.2.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
